<resources>
    <string name="app_name">Recip-E</string>

    <string name="serves">Serves: </string>
    <string name="prep_time">Prep Time: </string>
    <string name="cooking_time">Cooking Time: </string>
    <string name="minutes"> min</string>
    <string name="ingredients">Ingredients</string>
    <string name="save">Save</string>
    <string name="instructions">Instructions</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="login">Log in</string>
    <string name="or_signup">or, sign up</string>
    <string name="signup">Sign up</string>
    <string name="or_login">or, log in</string>

    <string name="profileHead">Welcome To Your Profile</string>
    <string name="changeUsername">Change Username</string>
    <string name="changePassword">Change Password</string>
    <string name="logout">Log Out</string>
    <string name="donePassword">DONE</string>
    <string name="doneUsername">DONE</string>
    <string name="goBackPassword">Go Back</string>
    <string name="goBackUsername">Go Back</string>
</resources>